# hsedit

./: .gitignore  .gitmodules  .project.config  .vimrc  AGENTS.md  CMakeLists.txt  JOURNAL.md  PLAN.md  PLAND.md  README.md  README_SETUP.md  TECHNICAL_DESIGN.md  customCMake.txt
app/: .module.config  CMakeLists.txt
docs/: TECHNICAL_DESIGN.html  cpp-vim-setup.html  gen_html.py  generate_technical_design.py  ncurses-tutorial.html  td-part1.html
docs/design/: VirtualTextBuffer_review.md  VirtualTextBuffer_test_plan.md
docs/nc-parts/: part1.html  part2.html  part3.html  part4.html  part5.html  part6.html
docs/ncurses_reference/: 01-initialization.html  02-windows.html  03-text-io.html  04-input.html  05-color.html  06-terminal.html  07-utility.html  08-keys.html  index.html  style.css
docs/ncurses_reference_ko/: 01-initialization.html  02-windows.html  03-text-io.html  04-input.html  05-color.html  06-terminal.html  07-utility.html  08-keys.html  index.html
modules/: .module.config  CMakeLists.txt
modules/terminal/: .module.config  CMakeLists.txt  terminal_module.cpp
scripts/: README.md  install-ncurses-linux.sh  install-ncurses-macos.sh  install-ncurses-windows.bat
src/: .module.config  CMakeLists.txt  main.cpp
src/app/: .module.config  CMakeLists.txt  main.cpp
src/module/: .module.config  CMakeLists.txt  EventBus.cpp  EventBus.h  ModuleRegistry.cpp  ModuleRegistry.h  event_bus.cpp  event_bus.h  module_registry.cpp  module_registry.h
src/system/: .module.config  CMakeLists.txt  HSTypes.h  IOBenchmarkResult.cpp  IOBenchmarkResult.h  IndexedItem.h  PageCache.cpp  PageCache.h  StorageIOSystem.cpp  StorageIOSystem.h  StorageInfo.cpp  StorageInfo.h  System.cpp  System.h  TextBuffer.cpp  TextBuffer.h  VirtualTextBuffer.cpp  VirtualTextBuffer.h  VirtualTextBufferBenchmark.h  VirtualTextBufferSystem.cpp  VirtualTextBufferSystem.h
src/tutorial/: .module.config  CMakeLists.txt  a.out  main  main.cpp
src/ui/: .module.config  CMakeLists.txt  Cursor.cpp  Cursor.h  TextApplication.cpp  TextApplication.h  TextBuffer.h  TextWindow.cpp  TextWindow.h  TextWindowBuffer.cpp  TextWindowBuffer.h  Vec2i.cpp  Vec2i.h  VirtualTextBuffer.h
tests/: .module.config  CMakeLists.txt  test_main.cpp  test_module_registry.cpp  test_protocol.cpp
